# codex-imagegen-bridge

./: .gitignore  AGENTS.md  COMPARISON.md  LICENSE  PRD.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: index.html
plugins/codex-image/: README.md
plugins/codex-image/.claude-plugin/: plugin.json
plugins/codex-image/scripts/: codex-imagegen  doctor
plugins/codex-image/skills/generate/: SKILL.md
scripts/: doctor
skills/codex-imagegen/: SKILL.md
skills/codex-imagegen/agents/: openai.yaml
src/codex_imagegen_bridge/: __init__.py  cli.py
tests/: test_cli.py  test_packaging.py
