[project]
name = "codex-imagegen-bridge"
version = "0.1.2"
description = "Generate images through Codex CLI built-in imagegen using ChatGPT/Codex quota."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "pablopda" }]
dependencies = []

[project.scripts]
codex-imagegen = "codex_imagegen_bridge.cli:main"

[project.optional-dependencies]
test = ["build>=1", "pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
